--- a/app_16.html
+++ b/app_16.html
@@ -12,15 +12,15 @@
         <section id="section">
             <h1 class="title">Tic Tac Toe</h1>
             <div class="container">
-                <div class="item"><span></span></div>
-                <div class="item"><span></span></div>
-                <div class="item"><span></span></div>
-                <div class="item"><span></span></div>
-                <div class="item"><span></span></div>
-                <div class="item"><span></span></div>
-                <div class="item"><span></span></div>
-                <div class="item"><span></span></div>
-                <div class="item"><span></span></div>
+                <div class="item" matricule="0"><span></span></div>
+                <div class="item" matricule="1"><span></span></div>
+                <div class="item" matricule="2"><span></span></div>
+                <div class="item" matricule="3"><span></span></div>
+                <div class="item" matricule="4"><span></span></div>
+                <div class="item" matricule="5"><span></span></div>
+                <div class="item" matricule="6"><span></span></div>
+                <div class="item" matricule="7"><span></span></div>
+                <div class="item" matricule="8"><span></span></div>
             </div>
             <p class="playerTurn">tURN Player</p>
         </section>
