Update and rename app_16.html to index.html

--- a/index.html
+++ b/index.html
@@ -22,14 +22,20 @@
                 <div class="item" matricule="7"><span></span></div>
                 <div class="item" matricule="8"><span></span></div>
             </div>
-            <p class="playerTurn">tURN Player</p>
+            <p class="playerTurn">turn Player</p>
         </section>
-        <div id="popUp">
+        <div id="popUpRestart">
             <h1>Draw !</h1>
             <input type="button" class="btnRestart" value="Restart">
         </div>
-        
-
+        <!-- popUp Players -->
+        <div id="popUpPlayers">
+            <div class="container">
+                <div class="player"><label>Palayer 1 :</label><input  type="text" placeholder="player 1"></div>
+                <div class="player"><label>Palayer 2 :</label><input  type="text" placeholder="player 2"></div>
+                <div class="btn"><input type="button" title='click' value="Add"></div>
+            </div>
+        </div>
         <script src="app_16.js" type="text/Javascript"></script>
     </body>
 </html>
